--- a/src/Pages/PersonalPage/PersonalPage.scss
+++ b/src/Pages/PersonalPage/PersonalPage.scss
@@ -6,6 +6,7 @@
     width: 250px;
 }
 .wrapper {
+    padding: 45px 0;
     min-height: 100%;
     display: flex;
     align-items: center;
@@ -19,4 +20,9 @@
 }
 .card-title {
     padding-top: 10px;
+}
+
+.error{
+    color: white;
+    font-size: 18px;
 }
