--- a/src/Pages/ProfilePage/ProfilePage.scss
+++ b/src/Pages/ProfilePage/ProfilePage.scss
@@ -1,4 +1,3 @@
-
 .data {
   display: flex;
   flex-direction: column;
@@ -28,5 +27,44 @@
     color: #0097A7;
     display: inline-block;
     width: 200px;
+  }
+}
+
+.wrapper {
+  .moderator {
+    display: flex;
+    width: 100%;
+    .control-panel {
+      flex: 0 1 50%;
+      ul.dropdown-content {
+        width: 135px !important;
+        top: -260px !important;
+        left: 440px !important;
+      }
+      .add-user {
+        display: flex;
+        align-items: center;
+        padding: 10px 30px;
+        width: 90%;
+        a {
+          flex: 0 0 32px;
+        }
+        span {
+          flex: 1 1 auto;
+          font-size: 1.4em;
+          display: inline-block;
+        }
+        .more {
+          a {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            text-align: center;
+          }
+
+          flex: 0 0 15%;
+        }
+      }
+    }
   }
 }
