--- a/src/Pages/PersonalPage/PersonalPage.scss
+++ b/src/Pages/PersonalPage/PersonalPage.scss
@@ -26,3 +26,33 @@
     color: white;
     font-size: 18px;
 }
+
+.modal .modal-content {
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+}
+
+.number-class {
+    width: 100%;
+}
+.letter-class {
+    width: 100%;
+}
+
+.dropdown-content li {
+    clear: both;
+    color: rgba(0, 0, 0, 0.87);
+    cursor: pointer;
+    min-height: 20px;
+    width: 100%;
+    text-align: left;
+}
+
+
+.dropdown-content li > span {
+    padding: 5px 5px;
+}
+.modal {
+    width: 25%;
+}
