--- a/src/Pages/ProfilePage/ProfilePage.scss
+++ b/src/Pages/ProfilePage/ProfilePage.scss
@@ -44,6 +44,7 @@
       .add-user {
         display: flex;
         align-items: center;
+        justify-content: space-between;
         padding: 10px 30px;
         width: 90%;
         a {
