--- a/src/Pages/PersonalPage/PersonalPage.scss
+++ b/src/Pages/PersonalPage/PersonalPage.scss
@@ -11,11 +11,12 @@
   justify-content: center;
 
   .modal {
-    width: 25%;
+    width: 45%;
   }
 
   .modal .modal-content {
-    padding: 24px;
+    padding: 20px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     // ADD CLASS
@@ -65,6 +66,11 @@
   font-size: 18px;
 }
 
+.css-2b097c-container {
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
 
 
 
