--- a/src/Pages/Users/Classes.scss
+++ b/src/Pages/Users/Classes.scss
@@ -37,7 +37,7 @@
           }
         }
         span {
-          width: 20px;
+          width: 2%;
           margin-right: 10px;
         }
         .fio {
@@ -47,22 +47,17 @@
         .login {
           margin: 0 10px;
           text-align: center;
-          width: 250px;
-        }
-        .role {
-          margin: 0 10px;
-          text-align: center;
-          width: 250px;
+          flex: 0 0 25%;
         }
         .email {
           margin: 0 10px;
           text-align: center;
-          width: 250px;
+          flex: 0 0 23%;
         }
         .mobileNumber {
           margin: 0 10px;
           text-align: center;
-          width: 150px;
+          flex: 0 0 15%;
         }
       }
       .buttons {
