--- a/src/Pages/Users/Classes.scss
+++ b/src/Pages/Users/Classes.scss
@@ -37,7 +37,7 @@
           }
         }
         span {
-          width: 2%;
+          width: 1%;
           margin-right: 10px;
         }
         .fio {
@@ -55,6 +55,11 @@
           flex: 0 0 23%;
         }
         .mobileNumber {
+          margin: 0 10px;
+          text-align: center;
+          flex: 0 0 15%;
+        }
+        .subject {
           margin: 0 10px;
           text-align: center;
           flex: 0 0 15%;
