--- a/src/Pages/Users/ClassroomItem/ClassroomItem.scss
+++ b/src/Pages/Users/ClassroomItem/ClassroomItem.scss
@@ -3,11 +3,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     .class-teacher {
       a {
         margin-left: 25px;
       }
+    }
+    .dropdown-content {
+      width: 200px !important;
     }
   }
   .class-student {
