--- a/src/Pages/DialogsPage/DialogsPage.scss
+++ b/src/Pages/DialogsPage/DialogsPage.scss
@@ -10,11 +10,15 @@
 
     .teacher {
       padding: 10px;
+      display: flex;
+      align-items: center;
+      min-height: 55px;
       border-bottom: 1px solid #a8a8a8;
     }
 
     .students {
-
+      padding: 10px;
+      display: flex;
     }
   }
 
@@ -36,8 +40,15 @@
       justify-content: space-between;
 
       .message-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        min-height: 55px;
         padding: 10px;
         border-bottom: 1px solid #a8a8a8;
+        i {
+          margin-left: 10px;
+        }
       }
 
       .chat {
@@ -48,27 +59,29 @@
         height: 535px;
         border-top: 2px solid #fff;
         border-bottom: 2px solid #fff;
+        .icons {
+          display: inline-block;
+        }
+        li {
+          padding: 10px 10px;
+        }
+        .entete {
+          margin-bottom: 5px;
+        }
+        .message {
+          padding: 10px;
+          max-width: 70%;
+          display: inline-block;
+          text-align: left;
+          border-radius: 5px;
+          span {
+            user-select: none;
+          }
+        }
+        .me {
+          text-align: right;
+        }
       }
-
-      .chat li {
-        padding: 10px 10px;
-      }
-      .chat .entete {
-        margin-bottom: 5px;
-      }
-
-      .chat .message {
-        padding: 10px;
-        max-width: 70%;
-        display: inline-block;
-        text-align: left;
-        border-radius: 5px;
-      }
-
-      .chat .me {
-        text-align: right;
-      }
-
       .message-submit {
         display: flex;
         justify-content: space-around;
