--- a/src/Pages/SchedulePage/SchedulePage.scss
+++ b/src/Pages/SchedulePage/SchedulePage.scss
@@ -4,24 +4,19 @@
 }
 
 .schedule-title {
+  text-align: center;
   font-size: 2em;
-  margin-left: 10px;
   margin-bottom: 20px;
-  span {
-    margin: 0 10px 0 20px;
-  }
 }
 .schedule {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
-  padding: 0 0.5em;
 
   .card {
-    margin: 0 0.5em;
-    width: 33.333%;
-    p {
-      font-size: 2em;
-    }
+    width: 50%;
     .lessons {
       box-shadow: inset 0 0 2px #000;
       min-height: 20px;
@@ -29,26 +24,32 @@
         font-size: 0.6em;
         border-bottom: 1px solid #a7a7a7;
         display: flex;
+        justify-content: space-between;
+        .main-class {
+          width: 40%;
+        }
         .add-class {
-          padding: 0 10px;
+          font-size: 12px;
+          width: 40%;
           display: flex;
+          padding: 0 10px;
           align-items: center;
           justify-content: center;
-          .btn-floating {
-            margin-left: 10px;
-          }
         }
-        span {
+        .time {
           text-align: center;
           border-right: 1px solid #a7a7a7;
-          width: 25%;
+          width: 20%;
           padding: 15px 7px;
         }
       }
-      .submit-schedule {
-        display: flex;
-        align-items: center;
-      }
+
+    }
+    .submit-schedule {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
