--- a/src/Pages/SchedulePage/ScheduleTS.scss
+++ b/src/Pages/SchedulePage/ScheduleTS.scss
@@ -2,15 +2,11 @@
   display: flex;
   flex-direction: column;
   .schedule {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
     width: 100%;
-    margin: -14px;
+    padding: -2%;
     .card {
-      padding: 7px;
-      width: 33.3333%;
+      margin: 1%;
+      width: 31.3333%;
       .lessons {
         box-shadow: inset 0 0 2px #000;
         min-height: 20px;
@@ -44,6 +40,6 @@
 .schedule-title {
   text-align: center;
   font-size: 2em;
-  margin-bottom: 20px;
+  margin: 20px 0 !important;
 }
 
