--- a/src/Pages/Users/Classes.scss
+++ b/src/Pages/Users/Classes.scss
@@ -2,8 +2,17 @@
   margin-top: 30px;
 }
 
+.breadcrumb:before {
+  color: inherit;
+}
+
 .users {
   margin-top: 30px;
+
+  .collapsible-header {
+    font-size: 18px;
+    color: inherit;
+  }
   .collapsible-body {
     display: none;
     border-bottom: 1px solid #ddd;
