--- a/src/Pages/TasksPage/TasksPage.scss
+++ b/src/Pages/TasksPage/TasksPage.scss
@@ -1,6 +1,145 @@
 .wrapper {
+  .MuiTableContainer-root {
+    width: 80%;
+    overflow-x: auto;
+  }
+  nav {
+    width: 80%;
+    margin-bottom: 20px;
+  }
+  .nav-wrapper {
+
+    padding: 0 10px;
+  }
   .modal {
     height: 70vh;
+  }
+  // AddTasks
+
+  .add-tasks {
+    width: 80%;
+    min-height: 76vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .tasks-body {
+      width: 90%;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      font-size: 18px;
+      align-items: center;
+
+      .class-number {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        align-items: center;
+        min-height: 54px;
+
+        .class {
+          width: 30%;
+        }
+      }
+
+      .subject {
+        min-height: 54px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        align-items: center;
+      }
+
+      .topic {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        align-items: center;
+
+        .input-field {
+          width: 72%;
+          margin: 0 !important;
+
+          input {
+            text-align: right;
+            border-bottom: 1px solid #9e9e9e !important;
+          }
+
+        }
+
+      }
+
+      .date {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        align-items: center;
+
+        input {
+          text-align: right;
+          width: 72%;
+        }
+      }
+
+      .deadline {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        align-items: center;
+
+        input {
+          text-align: right;
+          width: 72%;
+        }
+
+        .deadline-day {
+
+        }
+
+        .deadline-month {
+
+        }
+
+        .deadline-year {
+
+        }
+      }
+
+      .description {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        align-items: center;
+
+        .input-field {
+          textarea {
+            text-align: right;
+          }
+
+          width: 72%;
+          margin: 0 !important;
+        }
+      }
+
+      .btn {
+        width: 70%;
+      }
+
+      textarea.materialize-textarea {
+        line-height: normal;
+        overflow-y: hidden;
+        padding: .8rem .8rem .8rem .8rem;
+        min-height: 3rem;
+        box-sizing: border-box;
+      }
+    }
   }
   .tasks {
     padding: 20px;
@@ -19,6 +158,11 @@
         align-items: center;
 
         .btn {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          min-height: 60px;
+          border-radius: 10px;
           width: 400px;
           margin: 20px;
         }
@@ -27,110 +171,7 @@
   }
 }
 
-// AddTasks
 
-.add-tasks {
-  width: 80%;
-  min-height: 76vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .tasks-body {
-    width: 90%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    font-size: 18px;
-    align-items: center;
-    .class-number {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-      min-height: 54px;
-      .class {
-        width: 30%;
-      }
-    }
-
-    .subject {
-      min-height: 54px;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-    }
-
-    .topic {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-      .input-field {
-        width: 60%;
-        margin: 0 !important;
-      }
-    }
-
-    .date {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-      input {
-        text-align: right;
-        width: 60%;
-      }
-    }
-
-    .deadline {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-      .deadline-day {
-
-      }
-      .deadline-month {
-
-      }
-      .deadline-year {
-
-      }
-    }
-
-    .description {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-      .input-field {
-        width: 60%;
-        margin: 0 !important;
-      }
-    }
-    .btn {
-      width: 70%;
-    }
-    textarea.materialize-textarea {
-      line-height: normal;
-      overflow-y: hidden;
-      padding: .8rem .8rem .8rem .8rem;
-      min-height: 3rem;
-      box-sizing: border-box;
-    }
-  }
-}
 
 //ShowTasks
 
-
-thead {
-
-}
