--- a/src/Pages/TasksPage/TasksPage.scss
+++ b/src/Pages/TasksPage/TasksPage.scss
@@ -1,23 +1,27 @@
 .wrapper {
   .MuiTableContainer-root {
-    width: 80%;
+    width: 90%;
     overflow-x: auto;
   }
+  .MuiTableCell-head {
+    color: rgba(0, 0, 0, 0.87);
+    font-weight: 500;
+    line-height: 1.5rem;
+    border: 1px solid #b1b1b1;
+  }
   nav {
-    width: 80%;
+    width: 90%;
     margin-bottom: 20px;
   }
-  .nav-wrapper {
 
+  .nav-wrapper {
     padding: 0 10px;
   }
-  .modal {
-    height: 70vh;
-  }
+
   // AddTasks
 
   .add-tasks {
-    width: 80%;
+    width: 90%;
     min-height: 76vh;
     display: flex;
     align-items: center;
@@ -37,7 +41,7 @@
         justify-content: space-between;
         margin-bottom: 20px;
         align-items: center;
-        min-height: 54px;
+        //min-height: 54px;
 
         .class {
           width: 30%;
@@ -45,7 +49,7 @@
       }
 
       .subject {
-        min-height: 54px;
+        //min-height: 54px;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -126,6 +130,25 @@
           width: 72%;
           margin: 0 !important;
         }
+
+        span {
+          text-align: right;
+          width: 72%;
+        }
+      }
+
+      .answer {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+        input {
+          text-align: right;
+          width: 72%;
+          font-size: 18px;
+        }
+
       }
 
       .btn {
@@ -141,9 +164,10 @@
       }
     }
   }
+
   .tasks {
     padding: 20px;
-    width: 80%;
+    width: 90%;
     min-height: 76vh;
     display: flex;
     flex-direction: column;
@@ -170,7 +194,6 @@
     }
   }
 }
-
 
 
 //ShowTasks
