--- a/src/Pages/TasksPage/TasksPage.scss
+++ b/src/Pages/TasksPage/TasksPage.scss
@@ -150,6 +150,25 @@
         }
 
       }
+      .files {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .file-field {
+          width: 72%;
+          display: flex;
+          .file-path-wrapper {
+            width: 80%;
+          }
+
+          .add-files {
+            width: 20%;
+            margin-left: 20px;
+          }
+        }
+
+      }
 
       .btn {
         width: 70%;
