--- a/src/Pages/Users/ClassroomItem/ClassroomItem.scss
+++ b/src/Pages/Users/ClassroomItem/ClassroomItem.scss
@@ -87,6 +87,7 @@
     margin: 10px 0;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     a {
       margin-left: 25px;
     }
