--- a/src/Pages/DialogsPage/DialogsPage.scss
+++ b/src/Pages/DialogsPage/DialogsPage.scss
@@ -2,6 +2,7 @@
   margin: 30px 0;
   display: flex;
   max-height: 80vh;
+  color: #585858;
   .users-dialogs {
     background: #E5E5E5;
     border: 1px solid #a8a8a8;
@@ -9,16 +10,26 @@
     border-radius: 4px 0 0 4px;
 
     .teacher {
-      padding: 10px;
+      font-weight: bold;
+      padding: 20px;
       display: flex;
       align-items: center;
-      min-height: 55px;
       border-bottom: 1px solid #a8a8a8;
+      i {
+        margin-right: 20px;
+      }
     }
 
     .students {
-      padding: 10px;
+      padding: 10px 20px;
       display: flex;
+      align-items: center;
+      i {
+        margin-right: 20px;
+      }
+    }
+    .students-main {
+      font-weight: bold;
     }
   }
 
@@ -40,11 +51,11 @@
       justify-content: space-between;
 
       .message-header {
+        font-weight: bold;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        min-height: 55px;
-        padding: 10px;
+        padding: 20px;
         border-bottom: 1px solid #a8a8a8;
         i {
           margin-left: 10px;
@@ -54,18 +65,31 @@
       .chat {
         padding-left: 0;
         margin: 0;
-        list-style-type: none;
+        //list-style-type: none;
         overflow-y: scroll;
         height: 535px;
-        border-top: 2px solid #fff;
-        border-bottom: 2px solid #fff;
         .icons {
+          margin-left: 10px;
+          i {
+            line-height: 22.4px;
+            color: #9e9e9e;
+            font-size: 15px;
+            &:hover {
+              color: #444444;
+            }
+          }
+
           display: inline-block;
         }
         li {
-          padding: 10px 10px;
+          padding: 10px 20px;
         }
         .entete {
+          display: flex;
+          align-items: center;
+          span {
+            line-height: 22.4px;
+          }
           margin-bottom: 5px;
         }
         .message {
@@ -79,6 +103,9 @@
           }
         }
         .me {
+          display: flex;
+          flex-direction: column;
+          align-items:flex-end;
           text-align: right;
         }
       }
@@ -95,7 +122,8 @@
           margin-bottom: 0;
         }
 
-        button {
+        .btn {
+          color: #000;
           width: 20%;
         }
       }
