--- a/src/Pages/DialogsPage/DialogsPage.scss
+++ b/src/Pages/DialogsPage/DialogsPage.scss
@@ -16,6 +16,7 @@
       align-items: center;
       border-bottom: 1px solid #a8a8a8;
       i {
+        font-size: 12px;
         margin-right: 15px;
       }
     }
@@ -25,11 +26,12 @@
       display: flex;
       align-items: center;
       i {
+        font-size: 12px;
         margin-right: 15px;
       }
     }
     .students-main {
-      font-weight: bold;
+      //font-weight: bold;
     }
   }
 
