--- a/src/Pages/TasksPage/addTasks/AddTasks.scss
+++ b/src/Pages/TasksPage/addTasks/AddTasks.scss
@@ -1,7 +1,6 @@
 .wrapper {
-  color: #585858;
-
   .add-tasks {
+    color: #585858;
     padding: 40px 20px;
     width: 70%;
     display: flex;
@@ -13,7 +12,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      font-size: 14px;
+      font-size: 14px !important;
 
       .task-item {
         width: 100%;
@@ -31,6 +30,12 @@
           margin: 0 !important;
           text-align: right;
           border-bottom: 1px solid #9e9e9e !important;
+          font-size: 14px !important;
+        }
+        textarea {
+          width: 72%;
+          text-align: right;
+          font-size: 14px !important;
         }
 
         .deadline-days {
@@ -101,7 +106,7 @@
     textarea.materialize-textarea {
       line-height: normal;
       overflow-y: hidden;
-      padding: .8rem .8rem .8rem .8rem;
+      padding: .8rem 0 .8rem .8rem;
       min-height: 3rem;
       box-sizing: border-box;
     }
