--- a/src/Pages/TasksPage/addTasks/AddTasks.scss
+++ b/src/Pages/TasksPage/addTasks/AddTasks.scss
@@ -1,4 +1,35 @@
 .wrapper {
+  h4 {
+    margin: 20px 0 20px 0;
+  }
+  .mark {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    h6 {
+      display: inline-block;
+      margin: 0 15px 0 0;
+    }
+    span {
+      font-weight: bold;
+    }
+  }
+  .desc {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h6 {
+      display: inline-block;
+      margin: 0 15px 0 0;
+    }
+    span {
+      font-weight: bold;
+    }
+  }
+
   .add-tasks {
     color: #585858;
     padding: 40px 20px;
@@ -8,6 +39,7 @@
     justify-content: center;
 
     .tasks-body {
+      text-align: center;
       width: 90%;
       display: flex;
       flex-direction: column;
@@ -104,11 +136,7 @@
     }
 
     textarea.materialize-textarea {
-      line-height: normal;
-      overflow-y: hidden;
       padding: .8rem 0 .8rem .8rem;
-      min-height: 3rem;
-      box-sizing: border-box;
     }
   }
 }
