--- a/src/Pages/TasksPage/addTasks/AddTasks.scss
+++ b/src/Pages/TasksPage/addTasks/AddTasks.scss
@@ -2,29 +2,35 @@
   h4 {
     margin: 20px 0 20px 0;
   }
+
   .mark {
     width: 60%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
+
     h6 {
       display: inline-block;
       margin: 0 15px 0 0;
     }
+
     span {
       font-weight: bold;
     }
   }
+
   .desc {
     width: 60%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     h6 {
       display: inline-block;
       margin: 0 15px 0 0;
     }
+
     span {
       font-weight: bold;
     }
@@ -52,7 +58,9 @@
         justify-content: space-between;
         margin-bottom: 20px;
         align-items: center;
+        .add-file {
 
+        }
         .class {
           width: 30%;
         }
@@ -63,11 +71,14 @@
           text-align: right;
           border-bottom: 1px solid #9e9e9e !important;
           font-size: 14px !important;
+          color: #585858;
         }
+
         textarea {
           width: 72%;
           text-align: right;
           font-size: 14px !important;
+          color: #585858;
         }
 
         .deadline-days {
@@ -92,43 +103,6 @@
           }
         }
       }
-    }
-
-    .description {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-      align-items: center;
-
-      .input-field {
-        textarea {
-          text-align: right;
-        }
-
-        width: 72%;
-        margin: 0 !important;
-      }
-
-      span {
-        text-align: right;
-        width: 72%;
-      }
-    }
-
-    .answer {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-
-      input {
-        text-align: right;
-        width: 72%;
-        font-size: 18px;
-      }
-
     }
 
     .btn {
