--- a/src/Pages/TasksPage/TasksPage.scss
+++ b/src/Pages/TasksPage/TasksPage.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  color: #585858;
   .MuiTableContainer-root {
     width: 90%;
     overflow-x: auto;
@@ -58,4 +59,13 @@
 
 .status {
   font-weight: bold !important;
+}
+
+.delete {
+  display: flex !important;
+  align-items: center;
+  justify-content: space-between;
+  i {
+    cursor: pointer;
+  }
 }
