--- a/src/Pages/JournalPage/JournalPage.scss
+++ b/src/Pages/JournalPage/JournalPage.scss
@@ -1,21 +1,25 @@
 .journal {
   margin: 20px 0;
-  padding: 10px;
+  padding: 20px;
   width: 100%;
-  min-height: 80vh;
+  //min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #585858;
   .MuiTableContainer-root {
     width: 100%;
-    //overflow-x: auto;
+    overflow-x: auto;
   }
+  //.MuiTableRow-root {
+  //  display: table;
+  //}
   .students {
     width: 10%;
     border: 1px solid #b1b1b1;
   }
   .final-mark {
+    text-align: center;
     width: 8%;
     border: 1px solid #b1b1b1;
   }
@@ -28,11 +32,17 @@
       &:last-child {
         margin: 0;
       }
+      a:hover {
+        font-weight: bold;
+        text-decoration: underline;
+        color: #000000 !important;
+      }
     }
   }
   .dates {
     border: 1px solid #b1b1b1;
     width: 8%;
+    text-align: center;
   }
   .select-subject {
     width: 40%;
